--- a/src/Components/LoginForm.css
+++ b/src/Components/LoginForm.css
@@ -27,3 +27,17 @@
     text-decoration: underline;
 }
 
+/* Media Queries */
+@media (max-width: 400px) {
+    .login-form-container {
+        padding: 1rem;
+    }
+
+    .login-title {
+        font-size: 1.5rem;
+    }
+
+    .login-back {
+        font-size: 0.875rem;
+    }
+}
